seteada paleta de colores en less

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -19,7 +19,7 @@
        <h1>IniciaGit</h1>
        <h2>Cómo empezar con GitHub</h2>
    </header> 
-   <aside id="menu">
+   <nav id="menu">
        <ul>
            <li>Empezando con GitHub
                 <ul>
@@ -52,7 +52,7 @@
                 </ul>
            </li>
        </ul>
-   </aside>
+   </nav>
    <section id="home">
        <article id="empezando"></article>
        <article id="trabajando"></article>
