--- a/produccion/index.html
+++ b/produccion/index.html
@@ -8,13 +8,14 @@
 
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Quicksand:300|PT+Sans' rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
 <!-- Contenedor principal -->
-<div id="wrapper">
+<section id="contenedor">
    <header id="header">
        <h1>IniciaGit</h1>
        <h2>Cómo empezar con GitHub</h2>
@@ -62,7 +63,7 @@
    <footer id="footer">
        
    </footer>
-</div>
+</section>
 <!--/ Contenedor principal -->
 
 
