--- a/produccion/index.html
+++ b/produccion/index.html
@@ -16,52 +16,72 @@
 <body>
 <!-- Contenedor principal -->
 <section id="contenedor">
+
    <header id="header">
        <h1>IniciaGit</h1>
        <h2>Cómo empezar con GitHub</h2>
    </header> 
-   <nav id="menu">
-       <ul>
-           <li>Empezando con GitHub
-                <ul>
-                    <li>Instalar GitHub</li>
-                    <li>identificarte como usuario</li>
-                </ul>
-           </li>
-           <li>Trabando con GitHub
-                <ul>
-                    <li>Crear repo en GitHub</li>
-                    <li>Crear repo en local</li>
-                    <li>Enlazar repo local con GitHub</li>
-                    <li>Hacer cambios en la repo local</li>
-                    <li>Mandar los cambios a GitHub</li>
-                </ul>
-           </li>
-           <li>Colaborando con GitHub
-                <ul>
-                    <li>Hacer Fork a un proyecto</li>
-                    <li>Clonar el proyecto en local</li>
-                    <li>Hacer cambios en local</li>
-                    <li>Mandar los cambios a GitHub</li>
-                    <li>Hacer un Pull request</li>
-                </ul>
-           </li>
-           <li>Merge con GitHub
-                <ul>
-                    <li>Localizar Pull request</li>
-                    <li>Hacer Merge</li>
-                </ul>
-           </li>
-       </ul>
-   </nav>
-   <section id="home">
-       <article id="empezando"></article>
-       <article id="trabajando"></article>
-       <article id="colaborando"></article>
-       <article id="merge"></article>
-   </section>
+    <div class="row">
+        <div class="col-md-8">
+            <section id="home">
+                <article id="empezando">
+                    <header>
+                        <h1>Empezando con GitHub</h1>
+                    </header>
+                    <section>
+                    <h2>Instalar GitHub</h2>
+                        <p>Descargar GitHub para tu SO</p>
+                        <p>Comprovar que se ha instalado GitHub en el ordenador</p>
+                        <pre>
+                            <span>git —version</span>
+                        </pre>
+                    </section>
+                </article>
+                <article id="trabajando"></article>
+                <article id="colaborando"></article>
+                <article id="merge"></article>
+            </section>
+        </div>
+        <div class="col-md-4">
+            <nav id="menu">
+               <ul>
+                   <li>Empezando con GitHub
+                        <ul>
+                            <li>Instalar GitHub</li>
+                            <li>identificarte como usuario</li>
+                        </ul>
+                   </li>
+                   <li>Trabando con GitHub
+                        <ul>
+                            <li>Crear repo en GitHub</li>
+                            <li>Crear repo en local</li>
+                            <li>Enlazar repo local con GitHub</li>
+                            <li>Hacer cambios en la repo local</li>
+                            <li>Mandar los cambios a GitHub</li>
+                        </ul>
+                   </li>
+                   <li>Colaborando con GitHub
+                        <ul>
+                            <li>Hacer Fork a un proyecto</li>
+                            <li>Clonar el proyecto en local</li>
+                            <li>Hacer cambios en local</li>
+                            <li>Mandar los cambios a GitHub</li>
+                            <li>Hacer un Pull request</li>
+                        </ul>
+                   </li>
+                   <li>Merge con GitHub
+
+                        <ul>
+                            <li>Localizar Pull request</li>
+                            <li>Hacer Merge</li>
+                        </ul>
+                   </li>
+               </ul>
+            </nav>
+        </div>
+    </div>
    <footer id="footer">
-       
+      
    </footer>
 </section>
 <!--/ Contenedor principal -->
