estilado lista del menú lateral

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -45,13 +45,13 @@
         <div class="col-md-4">
             <nav id="menu">
                <ul>
-                   <li>Empezando con GitHub
+                   <li id='titulo'>Empezando con GitHub
                         <ul>
                             <li>Instalar GitHub</li>
                             <li>identificarte como usuario</li>
                         </ul>
                    </li>
-                   <li>Trabando con GitHub
+                   <li id='titulo'>Trabando con GitHub
                         <ul>
                             <li>Crear repo en GitHub</li>
                             <li>Crear repo en local</li>
@@ -60,7 +60,7 @@
                             <li>Mandar los cambios a GitHub</li>
                         </ul>
                    </li>
-                   <li>Colaborando con GitHub
+                   <li id='titulo'>Colaborando con GitHub
                         <ul>
                             <li>Hacer Fork a un proyecto</li>
                             <li>Clonar el proyecto en local</li>
@@ -69,7 +69,7 @@
                             <li>Hacer un Pull request</li>
                         </ul>
                    </li>
-                   <li>Merge con GitHub
+                   <li id='titulo'>Merge con GitHub
 
                         <ul>
                             <li>Localizar Pull request</li>
