añadido primer diseño logo en PSD i AI

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -51,7 +51,7 @@
                             <li>identificarte como usuario</li>
                         </ul>
                    </li>
-                   <li id='titulo'>Trabando con GitHub
+                   <li id='titulo'>Trabajando con GitHub
                         <ul>
                             <li>Crear repo en GitHub</li>
                             <li>Crear repo en local</li>
