estilado header bp1

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -18,9 +18,17 @@
 <section id="contenedor">
 
   <header id="header">
+    <figure id="logo">
+      <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
+    </figure>
      <h1>IniciaGit</h1>
      <h2>Cómo empezar con GitHub</h2>
   </header> 
+
+  <aside id="social">
+    
+  </aside>
+
   <section id="home">
       <article id="empezando">
           <header>
