--- a/produccion/index.html
+++ b/produccion/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Quicksand:300|PT+Sans' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
