estilado header en bp1 y 2

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -2,14 +2,14 @@
 <html lang="es_ES" />
 <head>
 	<meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>IniciaGit: Cómo empezar con GitHub</title>
 
     <link rel="stylesheet" href="css/normalize.min.css" />
-    <link href='http://fonts.googleapis.com/css?family=Quicksand:300|PT+Sans' rel='stylesheet' type='text/css' />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Quicksand:300|Raleway:400,700' rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -20,9 +20,9 @@
   <header id="header">
     <figure id="logo">
       <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
-    </figure>
      <h1>IniciaGit</h1>
      <h2>Cómo empezar con GitHub</h2>
+    </figure>
   </header> 
 
   <aside id="social">
@@ -31,17 +31,13 @@
 
   <section id="home">
       <article id="empezando">
-          <header>
-              <h1>Empezando con GitHub</h1>
-          </header>
-          <section>
+          <h1>Empezando con GitHub</h1>
           <h2>Instalar GitHub</h2>
-              <p>Descargar GitHub para tu SO</p>
-              <p>Comprovar que se ha instalado GitHub en el ordenador</p>
-              <pre>
-                  <span>git —version</span>
-              </pre>
-          </section>
+          <p>Descargar GitHub para tu SO</p>
+          <p>Comprovar que se ha instalado GitHub en el ordenador</p>
+          <pre>
+              <span>git —version</span>
+          </pre>
       </article>
       <article id="trabajando"></article>
       <article id="colaborando"></article>
