--- a/produccion/index.html
+++ b/produccion/index.html
@@ -15,18 +15,22 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/vendor/jquery.mobilemenu.js"></script>
+
+    <!-- Script mobileMenu -->
     <script>
       $(function(){
         $('#mobileMenu').mobileMenu({
           combine: false,         
           groupPageText: '',     
           nested: true,        
-          prependTo: '#menu',      
+          prependTo: 'nav',      
           switchWidth: 992,     
           topOptionText: ''
         });
       })
     </script>
+    <!--/ Script mobileMenu -->
+
 </head>
 
 <body>
@@ -91,6 +95,17 @@
       <pre>
           <span>git —version</span>
       </pre>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+                  v
+                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
+                              v
   </article>
   <article id="trabajando"></article>
   <article id="colaborando"></article>
@@ -102,6 +117,21 @@
 
 </section>
 <!--/ Contenedor principal -->
+
+<!-- Script menu position fixed -->
+<script>
+  var num = 10; //number of pixels before modifying styles
+
+  $(window).bind('scroll', function () {
+      if ($(window).scrollTop() > num) {
+          $('.menu').addClass('fixed');
+      } else {
+          $('.menu').removeClass('fixed');
+      }
+  });
+</script>
+<!--/ Script manu position fixed -->
+
 
 <!-- Google Analytics -->
 <script>
