estilado el article para el break point 1.

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -93,19 +93,11 @@
       <p>Descargar GitHub para tu SO</p>
       <p>Comprovar que se ha instalado GitHub en el ordenador</p>
       <pre>
+      <div class="ventana_ternminal">
+        <div class="terminal">Terminal</div>
+      </div>
           <span>git —version</span>
-      </pre>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-                  v
-                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, non possimus distinctio hic dignissimos deserunt maiores aliquid animi minima expedita totam perferendis debitis ducimus excepturi illum voluptate consequuntur sit reprehenderit.</p>
-                              v
+      </pre>         
   </article>
   <article id="trabajando"></article>
   <article id="colaborando"></article>
