ahora el nav se queda fixed con el scroll en bpa1 y 2

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -31,6 +31,8 @@
     </script>
     <!--/ Script mobileMenu -->
 
+
+
 </head>
 
 <body>
@@ -45,7 +47,7 @@
   </figure>
 
 <!-- MobileMenu -->
-  <nav id="menu">
+  <nav class="menu">
      <ul id='mobileMenu'>
          <li><a href="empezando_con_github">Empezando con GitHub</a>
             <ul>
@@ -97,7 +99,15 @@
         <div class="terminal">Terminal</div>
       </div>
           <span>git —version</span>
-      </pre>         
+      </pre>  
+      <p>
+               <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
+               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
+               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
+               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
+             </p>       
   </article>
   <article id="trabajando"></article>
   <article id="colaborando"></article>
@@ -122,8 +132,19 @@
       }
   });
 </script>
-<!--/ Script manu position fixed -->
+<!--/ Script menu position fixed -->
 
+    <script>
+      var num = 163; //number of pixels before modifying styles
+
+      $(window).bind('scroll', function () {
+          if ($(window).scrollTop() > num) {
+              $('.menu').addClass('fixed');
+          } else {
+              $('.menu').removeClass('fixed');
+          }
+      });
+    </script>
 
 <!-- Google Analytics -->
 <script>
