muchos cambios de estio en el bp3

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -30,29 +30,22 @@
       })
     </script>
     <!--/ Script mobileMenu -->
-
-
-
 </head>
 
 <body>
-<!-- Contenedor principal -->
 <section id="contenedor">
-
 <header id="header">
   <figure id="logo">
     <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
    <h1>IniciaGit</h1>
    <h2>Cómo empezar con GitHub</h2>
   </figure>
-
-<!-- MobileMenu -->
   <nav class="menu">
      <ul id='mobileMenu'>
          <li><a href="empezando_con_github">Empezando con GitHub</a>
             <ul>
-                <li><a href="instalar_Gigithub">Instalar GitHub</a></li>
-                <li><a href="Identificarte como usuario">Identificarte como usuario</a></li>
+                <li><a href="instalar_github">Instalar GitHub</a></li>
+                <li><a href="identificarte como usuario">Identificarte como usuario</a></li>
             </ul>
          </li>
          <li><a href="trabajando_con_github">Trabajando con GitHub</a>
@@ -81,15 +74,9 @@
          </li>
      </ul>
   </nav>
-<!--/ MobileMenu -->
-
 </header> 
-
-<aside id="social"></aside>
-
 <section id="home">
-
-  <article id="empezando">
+  <article id="empezando_con_github">
       <h1>Empezando con GitHub</h1>
       <h2>Instalar GitHub</h2>
       <p>Descargar GitHub para tu SO</p>
@@ -106,21 +93,72 @@
                <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
                <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
                <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
+               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
+               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
+               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
                <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
              </p>       
   </article>
+
+  <article id="instalar_github">
+      <h1>Empezando con GitHub</h1>
+      <h2>Instalar GitHub</h2>
+      <p>Descargar GitHub para tu SO</p>
+      <p>Comprovar que se ha instalado GitHub en el ordenador</p>
+      <pre>
+      <div class="ventana_ternminal">
+        <div class="terminal">Terminal</div>
+      </div>
+          <span>git —version</span>
+      </pre>  
+      <p>
+               <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
+               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
+               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
+               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
+               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
+               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
+               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
+             </p>       
+  </article>
+  <article id="identificarte como usuario">
+      <h1>Empezando con GitHub</h1>
+      <h2>Instalar GitHub</h2>
+      <p>Descargar GitHub para tu SO</p>
+      <p>Comprovar que se ha instalado GitHub en el ordenador</p>
+      <pre>
+      <div class="ventana_ternminal">
+        <div class="terminal">Terminal</div>
+      </div>
+          <span>git —version</span>
+      </pre>  
+      <p>
+               <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
+               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
+               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
+               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
+               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
+               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
+               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
+             </p>       
+  </article>
+
   <article id="trabajando"></article>
   <article id="colaborando"></article>
   <article id="merge"></article>
-
   </section>
- 
-  <footer id="footer"></footer>
-
 </section>
-<!--/ Contenedor principal -->
 
-<!-- Script menu position fixed -->
 <script>
   var num = 10; //number of pixels before modifying styles
 
@@ -132,21 +170,17 @@
       }
   });
 </script>
-<!--/ Script menu position fixed -->
+<script>
+  var num = 163; //number of pixels before modifying styles
 
-    <script>
-      var num = 163; //number of pixels before modifying styles
-
-      $(window).bind('scroll', function () {
-          if ($(window).scrollTop() > num) {
-              $('.menu').addClass('fixed');
-          } else {
-              $('.menu').removeClass('fixed');
-          }
-      });
-    </script>
-
-<!-- Google Analytics -->
+  $(window).bind('scroll', function () {
+      if ($(window).scrollTop() > num) {
+          $('.menu').addClass('fixed');
+      } else {
+          $('.menu').removeClass('fixed');
+      }
+  });
+</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -155,6 +189,6 @@
   ga('create', 'UA-45274381-1', 'site88.net');
   ga('send', 'pageview');
 </script>
-
 </body>
+
 </html>
